# ccs-subread-align

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build_docker.sh  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
original_scripts/: Dockerfile  multi_zmw_hellinger_analysis_filtered.ipynb  subread_hellinger_analysis.py
src/ccs_subread_align/: __init__.py  alignment.py  composition.py  io.py
tests/: test_alignment.py  test_ccs_subread_align.py  test_composition.py  test_io.py
tests/data/: hg38_chrM_circularized_by_doubling.fa  hg38_chrM_circularized_by_doubling.fa.fai  test_cases.bam  test_cases.bam.bai  test_cases_subreads.bam  test_cases_subreads.bam.bai
