[tool.poetry]
name = "ccs_subread_align"
version = "0.1.0"
description = "Aligning PacBio subreads to thier --by-strand CCS reads"
authors = ["Natalie Gill"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
