[tool.poetry]
name = "ccs_subread_align"
version = "0.1.0"
description = "Aligning PacBio subreads to their --by-strand CCS reads"
authors = ["Natalie Gill"]
license = "AGPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pysam = "*"
edlib = "*"
numpy = "*"
tqdm = "*"
aligntools = "*"
pandas = ">=2.0,<3"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
pytest-cov = "*"
matplotlib = "^3.10.8"
notebook = "^7.5.3"
scipy = "^1.17.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
